--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,8 +1,1 @@
-# file: tasks/emacs.yml
-
-- name: DOTFILES | get dotfiles from git repository
-  git: repo={{ dotfiles_repo_url }} dest="/tmp/dotfiles" accept_hostkey=yes
-  register: dotfiles_downloaded
-- name: DOTFILES | install dotfiles
-    command: ./bootstrap.sh -f chdir="/tmp/dotfiles"
-    when: dotfiles_downloaded.changed
+# main.yml
