--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,4 +5,6 @@
   register: dotfiles_downloaded
 - name: DOTFILES | install dotfiles
   command: ./bootstrap.sh -f chdir="/tmp/dotfiles"
+  become: yes
+  become_user: {{ user }}
   when: dotfiles_downloaded.changed
