--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,6 +4,6 @@
   git: repo={{ dotfiles_repo_url }} dest="/tmp/dotfiles" accept_hostkey=yes
   register: dotfiles_downloaded
 - name: DOTFILES | install dotfiles
-  command: ./bootstrap.sh -f chdir="/tmp/dotfiles"
+  command: "/tmp/dotfiles/bootstrap.sh -f"
   become: yes
   when: dotfiles_downloaded.changed
