--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,6 +2,7 @@
 
 - name: DOTFILES | get dotfiles from git repository
   git: repo={{ dotfiles_repo_url }} dest="/tmp/dotfiles" accept_hostkey=yes
+  become: yes
   register: dotfiles_downloaded
 - name: DOTFILES | install dotfiles
   command: "/tmp/dotfiles/bootstrap.sh -f"
