--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -4,12 +4,12 @@
   git: repo={{ dotfiles_repo_url }} dest="/tmp/dotfiles" accept_hostkey=yes
   become: yes
   register: dotfiles_downloaded
-- name: Make my directory tree readable
+- name: DOTFILES | make dir executable
   file:
     path: "/tmp/dotfiles"
     mode: u=rwX,g=rX,o=rX
     recurse: yes
 - name: DOTFILES | install dotfiles
-  command: "/tmp/dotfiles/bootstrap.sh -f"
+  command: "/tmp/dotfiles/bootstrap.sh -f /home/vagrant"
   become: yes
   when: dotfiles_downloaded.changed
