--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,8 +3,8 @@
 - name: DOTFILES | get dotfiles from git repository
   git: repo={{ dotfiles_repo_url }} dest={{ dotfiles_tmp }} accept_hostkey=yes
   sudo: False
-  register: dotfiles_downloaded_{{ dotfiles_repo_url }}
+  #register: dotfiles_downloaded_{{ dotfiles_repo_url }}
 - name: DOTFILES | install dotfiles
   command: "{{ dotfiles_tmp }}/bootstrap.sh -f -d {{ dotfiles_dest }}"
   sudo: False
-  when: dotfiles_downloaded_{{ dotfiles_repo_url }}.changed and {{ run_bootstrap }}
+  #when: dotfiles_downloaded_{{ dotfiles_repo_url }}.changed and {{ run_bootstrap }}
