--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,5 +7,5 @@
 - name: DOTFILES | install dotfiles
   command: "{{ dotfiles_tmp }}/bootstrap.sh -f -d {{ dotfiles_dest }}"
   sudo: False
-  when: {{ run_bootstrap }}
+  when: "{{ run_bootstrap }}"
   #dotfiles_downloaded_{{ dotfiles_repo_url }}.changed and {{ run_bootstrap }}
