--- a/tasks/emacs.yml
+++ b/tasks/emacs.yml
@@ -5,10 +5,14 @@
     cmd: "id"
   register: whoami
 
+- name: EMACS.D | print name
+  debug:
+    msg: "{{ whoami }}"
+
 - name: EMACS.D | get .emacs.d from git repository
   become: yes
   become_user: "{{ whoami }}"
-  git: repo={{ emacs_repo_url }}
-       dest={{ dest }}
+  git: repo="{{ emacs_repo_url }}"
+       dest="{{ emacs_dest }}"
        accept_hostkey=yes
        update=no
