--- a/tasks/dotfiles.yml
+++ b/tasks/dotfiles.yml
@@ -1,9 +1,9 @@
 # meta/main.yml
 
-- name: DOTFILES | get username
-  command:
-    cmd: "id"
-  register: whoami
+# - name: DOTFILES | get username
+#   command:
+#     cmd: "id"
+#   register: whoami
 
 - name: DOTFILES | get dotfiles from git repository
   git: repo={{ dotfiles_repo_url }}
@@ -14,6 +14,6 @@
 
 - name: DOTFILES | install dotfiles
   become: yes
-  become_user: "{{ whoami }}"
+  become_user: "{{ ansible_user }}"
   command: "{{ dotfiles_tmp }}/bootstrap.sh -f -d {{ dotfiles_dest }}"
   when: dotfiles_downloaded.changed
