--- a/tasks/emacs.yml
+++ b/tasks/emacs.yml
@@ -13,6 +13,6 @@
   become: yes
   become_user: "{{ ansible_user }}"
   git: repo="{{ emacs_repo_url }}"
-       dest="{{ emacs_dest }}"
+       dest="{{ emacs_dest }}/.emacs.d"
        accept_hostkey=yes
        update=no
