--- a/tasks/emacs.yml
+++ b/tasks/emacs.yml
@@ -10,8 +10,8 @@
 #     msg: "{{ whoami }}"
 
 - name: EMACS.D | get .emacs.d from git repository
-  become: yes
-  become_user: "{{ ansible_user }}"
+  # become: yes
+  # become_user: "{{ ansible_user }}"
   git: repo="{{ emacs_repo_url }}"
        dest="{{ emacs_dest }}/.emacs.d"
        accept_hostkey=yes
